[package]
name = "my_future"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-tokio"
path = "src/bin/mini-tokio.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["full"]}
futures = "0.3"
crossbeam = "*"